Adding Merge, removing inliner, adding postcss

--- a/source.html
+++ b/source.html
@@ -3,16 +3,18 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width"/>
-<title>Oh, what fun it is to save on Movie Tickets.</title>
+<title>The Title</title>
 
-    <!-- build:css inline working/veryverytidy.css -->
-    <link rel="stylesheet" href="ink.css">
-    <link rel="stylesheet" href="my_styles.css">
+    <!-- build:css inline styles.css -->
+    <link rel="stylesheet" href="css/ink.css">
+    <link rel="stylesheet" href="css/my_styles.css">
     <!-- /build -->
-
 
 </head>
 <body>
+
+
+
 <table class="body">
     <tr>
         <td class="center" align="center" valign="top">
