Added gem premailer and vagrant

--- a/source.html
+++ b/source.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width"/>
 <title>The Title</title>
 
-    <!-- build:css inline styles.css -->
+    <!-- build:css inline tidy.css -->
     <link rel="stylesheet" href="css/ink.css">
     <link rel="stylesheet" href="css/my_styles.css">
     <!-- /build -->
