--- a/source.html
+++ b/source.html
@@ -6,8 +6,8 @@
 <title>The Title</title>
 
     <!-- build:css inline tidy.css -->
-    <link rel="stylesheet" href="css/ink.css">
-    <link rel="stylesheet" href="css/my_styles.css">
+    <link rel="stylesheet" href="css/ink.css" />
+    <link rel="stylesheet" href="css/my_styles.css" />
     <!-- /build -->
 
 </head>
@@ -32,7 +32,7 @@
                                             <table class="twelve columns">
                                                 <tr>
                                                     <td class="six sub-columns">
-                                                        <img src="http://placehold.it/200x50">
+                                                        <img src="http://placehold.it/200x50" alt="." />
                                                     </td>
                                                     <td class="six sub-columns last" style="text-align:right; vertical-align:middle;">
                                                         <span class="template-label">BASIC</span>
@@ -108,7 +108,7 @@
                                                         </tr>
                                                     </table>
 
-                                                    <br>
+                                                    <br />
 
                                                     <table class="tiny-button twitter">
                                                         <tr>
@@ -118,7 +118,7 @@
                                                         </tr>
                                                     </table>
 
-                                                    <br>
+                                                    <br />
 
                                                     <table class="tiny-button google-plus">
                                                         <tr>
